# nanohydra

./: LICENSE  README.md
gap9/: Makefile
gap9/gap_apps/first_app/: CMakeLists.txt  Kconfig  first_app.c  sdk.config
gap9/gap_apps/first_app_full/: CMakeLists.txt  first_app.c  gaptest.yml
gap9/gap_apps/first_app_full_omp/: CMakeLists.txt  first_app.c
gap9/include/: hydra.h  hydra_convolve.h  hydra_forward.h  hydra_reset.h  hydra_sparse_scale.h  hydra_utils.h
gap9/src/: hydra_classifier.c  hydra_convolve.c  hydra_forward.c  hydra_init.c  hydra_reset.c  hydra_sparse_scale.c  hydra_utils.c
gap9/test/: classf_equivalence_check.c  classf_equivalence_check.py  forward_equivalence_check.c  forward_equivalence_check.py  model_equivalence_check.c  model_equivalence_check.py  scaler_equivalence_check.c  scaler_equivalence_check.py
presentation/: sample.tex
python/: .gitignore  Makefile  download_sc.py  download_sc_aug.py  profile_hydra.py  requirements.txt  run_ucr_benchmark.py  setup.py  test.py  test_conv_fn_equivalence.py  test_data_aug.py  test_quant.py  test_sc.py  test_sc_aug.py  test_scaler.py  tmse.py
python/mlutils/: quantizer.py
python/nanohydra/: hydra.py  setup.py  utils.py
python/nanohydra/optimized_fns/: combined_counting_opt_fn.pyx  conv1d_opt_fn.pyx  conv1d_opt_orig.pyx  conv1d_opt_x_f32_w_b1.pyx  conv1d_opt_x_f32_w_f32.pyx  conv1d_opt_x_int16_w_b1.pyx  conv1d_opt_x_int16_w_b1_notake.pyx  conv1d_opt_x_int8_w_b1.pyx  hard_counting_opt_fn.pyx  soft_counting_opt_fn.pyx
python/scripts/: download_sc.py  ucr_compare.py
python/tsc/: hard_counting_opt_fn.pyx  hydra.py  hydra_opt_fn.pyx
thesis/: report.tex
thesis/acr/: main.tex
thesis/fig/: hydra_overview.tex
thesis/refs/: bibliography.bib
thesis/src/: abstract.tex  acknowledgments.tex  authorship.tex  background.tex  conclusion.tex  implementation.tex  introduction.tex  related_work.tex  results.tex
